--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,33 @@
 version: '3.8'
+
 services:
-  api:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  app:
+    build: .
     ports:
-      - "${APP_PORT:-3000}:3000"
+      - "3000:3000"
     environment:
-      - NODE_ENV=${NODE_ENV:-development}
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/weather_api?schema=public
+      - NODE_ENV=production
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/weather_db
       - WEATHER_API_KEY=${WEATHER_API_KEY}
-      - APP_PORT=3000
-      - BASE_URL=${BASE_URL:-http://localhost:3000}
-      - SMTP_HOST=${SMTP_HOST:-smtp.gmail.com}
-      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
       - SMTP_USER=${SMTP_USER}
       - SMTP_PASS=${SMTP_PASS}
-      - LOG_LEVEL=${LOG_LEVEL:-debug}
-      - WEATHER_API_TIMEOUT=${WEATHER_API_TIMEOUT:-5000}
     depends_on:
-      postgres:
-        condition: service_healthy
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
-    command: sh -c "npm run migrate:dev && npm run start:dev"
+      - db
+    restart: unless-stopped
 
-  postgres:
+  db:
     image: postgres:14-alpine
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=weather_api
+      - POSTGRES_DB=weather_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+    restart: unless-stopped
 
 volumes:
   postgres_data:
