--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,21 @@
+APP_PORT=
+
 DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_URL=
+
+BASE_URL=
+
 NODE_ENV=
+
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
-APP_PORT=
+
 JWT_SECRET=
+
 WEATHER_API_KEY=
